<?xml version="1.0"?>
<package format="2">
    <name>PRP_projekt</name>
    <version>0.1.0</version>
    <description>Projekt line follower robot</description>

    <maintainer email="my@email.todo">Roman</maintainer>

    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>
</package>
